2000-08-28  Robin * Slomkowski  <rslomkow@eazel.com>

	* gnome-vfs.spec.in: fixed config file globs

2000-08-28  John Sullivan  <sullivan@eazel.com>

	* data/mime/gnome-vfs.keys:
	Added application/x-palm-database, reported by a 
	Nautilus user.

2000-08-27 Alastair McKinstry <mckinstry@computer.org>

	* ga.po: Added Irish translation.

2000-08-25  John Sullivan  <sullivan@eazel.com>

	Fixed bug 1388 (some MIME types have no description)

	* data/mime/gnome-vfs.mime:
	* data/mime/gnome-vfs.keys:
	Added descriptions for all un-descriptioned MIME types
	from gnome-vfs.mime and mime-magic. The check-mime
	script now finds no problems. Also added a couple of
	missing MIME types that were reported by Nautilus users.

2000-08-25  Robin * Slomkowski  <rslomkow@eazel.com>

	* modules/Makefile.am: added efs-method.c efs-method.h 
	forgotten files for make dist

2000-08-25  John Sullivan  <sullivan@eazel.com>

	Fixed bug 2311 (sort by date should put most recent dates first).
	Also made the same change for size.
	Also fixed some bugs in trash-directory locating, and added
	testing code for this.

	* libgnomevfs/gnome-vfs-file-info.c:
	(gnome_vfs_file_info_compare_for_sort): Added comment clarifying
	that the sort order should be the natural order for each type,
	not necessarily strict "small to large". Then changed size
	and date orderings to go the opposite way.
	* modules/file-method.c: (find_trash_directory): Fixed a couple
	of problems Darin and I discovered that involved trying to
	find Trash on "/".
	* test/test-shell.c: (do_findtrash), (main): Added findtrash
	command to test shell, and made it put the prompt on a new
	line instead of appending it to the most recent output.

Fri Aug 25 09:15:15 2000  Dietmar Maurer  <dietmar@maurer-it.com>

	* modules/efs-method.c: minor changes for new libefs code.

2000-08-24  Ali Abdin <aliabdin@aucegypt.edu>

        * modules/pipe-method.c:
        (do_close): Removed a FIXME because Darin says (in a prior cvs-commit)