@@ -1,3 +1,9 @@
+2000-08-28  Gene Z. Ragan  <gzr@eazel.com>
+
+	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_new):
+	Pavel here.
+	Refactored a bit making it more beautiful.
+
 2000-08-28  Robin * Slomkowski  <rslomkow@eazel.com>
 
 	* gnome-vfs.spec.in: fixed config file globs
